Stop "Map Controls" text from jumping

--- a/stylesheets/map-controls.scss
+++ b/stylesheets/map-controls.scss
@@ -66,6 +66,12 @@
         font-size:18px;
         font-weight:bold;
         text-align:center;
+
+        transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+
         padding-right:10px;
         white-space:nowrap;
         .map-controls-open & {
